add profile selection with basic auth
